# vagrant-miros-cmake

./: .gitignore  README.md
i386/: CMakeLists.txt.patch  Vagrantfile  bootstrap  bootstrap.sh  core.c.patch  fs.c.patch  getaddrinfo.c.patch  getnameinfo.c.patch  mirbsd.c  signal.c.patch  stream.c.patch  thread.c.patch  threadpool.c.patch  udp.c.patch
i386/test/: CMakeLists.txt  Vagrantfile  recur-cpplint  recur-cpplint.sh  recur-splint  recur-splint.sh  recur-vera++  recur-vera++.sh
